navbar: removed extra padding & fixed logo size

--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@
     --bg-color:#fff;
     --card-color:#f9f9f9;
     --footer-color:#0e382c;
+    --body-padding: 10px 80px;
 }
 .wrapper {
-    margin: 0 auto;
+    width: 100vw;
 }
 section {
     width: 100%;
@@ -37,7 +38,7 @@ header nav{
     left: 0;
     width: 100%;
     z-index: 1;
-    padding: 20px 150px 10px 150px;
+    padding:var(--body-padding);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +47,7 @@ header nav{
 }
 header .logo {
     position: relative;
-    max-width: 60px;
+    max-width: 45px;
 }
 header ul {
     position: relative;
@@ -56,15 +57,15 @@ header ul {
 header ul li a {
     display: inline-block;
     color: var(--secondary-color);
-    margin: 0 60px 8px 0;
     text-decoration: none;
     font-size: 1.6rem;
-    padding: 5px 10px;
+    margin:0 1.5em;
+    padding: 0 5px;
     letter-spacing: 1px;
 }
 header ul li a:hover {
     border-bottom:2px solid var(--primary-color) ;
-    margin-bottom:6px;  
+    margin-bottom:-2px;  
 }
 .content {
     position: relative;
@@ -72,7 +73,7 @@ header ul li a:hover {
     left: 0;
     width: 100%;
     height: 700px;
-    padding: 20px 150px;
+    padding: var(--body-padding);
     display: flex;
     justify-content: space-between;
     align-items:center;
